@@ -1,3 +1,7 @@
+2004-06-28 Ian Rutt
+ * Changed relaxed.f90 so that the relaxed topography is set to just below
+ zero in masked areas.
+
 2004-06-18 Ian Rutt
  * Added possibility of reading in fields from netcdf file scaled or
    unscaled
